fix pading for main content on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,9 @@ body {
 .layout {
     height: 100%;
     padding-top: 64px;
+    @media (max-width: 575px) {
+        padding-top: 96px;
+    }
 }
 
 .main {
